# cookiecutter-pyproject

./: LICENSE  README.md  cookiecutter.json  requirements.txt
hook/: pre_gen_project.py
hooks/: pre_gen_project.py
{{ cookiecutter.project_name }}/: .travis.yml  LICENSE  README.md  pyproject.toml  upload.py
{{ cookiecutter.project_name }}/tests/: test_{{ cookiecutter.project_name }}.py
